A _bunch_ of small fixups to keep FindBugs quiet (a long time coming), including:
- Use .valueOf() instead of new() on Byte/Short/Integer/Long/Character
- Don't do null-checks after de-references (in most cases we know the argument won't be null, but let's be pedantic anyway)
- Removed a bunch of dead-stores.