@@ -334,7 +334,7 @@ public class ResultSet implements java.sql.ResultSet {
 		}
 
 		return (ResultSet) Util.handleNewInstance(JDBC_4_RS_4_ARG_CTOR,
-				new Object[] { new Long(updateCount), new Long(updateID), conn,
+				new Object[] { Long.valueOf(updateCount), Long.valueOf(updateID), conn,
 						creatorStmt });
 	}
 
@@ -421,18 +421,22 @@ public class ResultSet implements java.sql.ResultSet {
 			Connection conn, Statement creatorStmt) throws SQLException {
 		this.connection = conn;
 
+		this.retainOwningStatement = false;
+		
 		if (this.connection != null) {
 			this.useStrictFloatingPoint = this.connection
 					.getStrictFloatingPoint();
 			this.setDefaultTimeZone(this.connection.getDefaultTimeZone());
 			this.connectionId = this.connection.getId();
 			this.useFastDateParsing = this.connection.getUseFastDateParsing();
+			this.profileSql = this.connection.getProfileSql();
+			this.retainOwningStatement = 
+				this.connection.getRetainStatementAfterResultSetClose();
 		}
 
 		this.owningStatement = creatorStmt;
 
 		this.catalog = catalog;
-		this.profileSql = this.connection.getProfileSql();
 
 		this.fields = fields;
 		this.rowData = tuples;
@@ -462,13 +466,6 @@ public class ResultSet implements java.sql.ResultSet {
 		if (this.fields != null) {
 			initializeWithMetadata();
 		} // else called by Connection.initializeResultsMetadataFromCache() when cached
-
-		this.retainOwningStatement = false;
-		
-		if (this.connection != null) {
-			retainOwningStatement = 
-				this.connection.getRetainStatementAfterResultSetClose();
-		}
 	}
 
 	protected void initializeWithMetadata() throws SQLException {
@@ -692,7 +689,7 @@ public class ResultSet implements java.sql.ResultSet {
 		// matching column will be returned. "
 		//
 		for (int i = numFields - 1; i >= 0; i--) {
-			Integer index = new Integer(i);
+			Integer index = Integer.valueOf(i);
 			String columnName = this.fields[i].getName();
 			String fullColumnName = this.fields[i].getFullName();
 
@@ -753,14 +750,14 @@ public class ResultSet implements java.sql.ResultSet {
 		if ((columnIndex < 1)) {
 			throw SQLError.createSQLException(Messages.getString(
 					"ResultSet.Column_Index_out_of_range_low", new Object[] {
-							new Integer(columnIndex),
-							new Integer(this.fields.length) }),
+							Integer.valueOf(columnIndex),
+							Integer.valueOf(this.fields.length) }),
 					SQLError.SQL_STATE_ILLEGAL_ARGUMENT); //$NON-NLS-1$
 		} else if ((columnIndex > this.fields.length)) {
 			throw SQLError.createSQLException(Messages.getString(
 					"ResultSet.Column_Index_out_of_range_high", new Object[] {
-							new Integer(columnIndex),
-							new Integer(this.fields.length) }),
+							Integer.valueOf(columnIndex),
+							Integer.valueOf(this.fields.length) }),
 					SQLError.SQL_STATE_ILLEGAL_ARGUMENT); //$NON-NLS-1$
 		}
 
@@ -1215,7 +1212,7 @@ public class ResultSet implements java.sql.ResultSet {
 					throw SQLError.createSQLException(Messages
 							.getString("ResultSet.Bad_format_for_BigDecimal",
 									new Object[] { stringVal,
-											new Integer(columnIndex) }),
+											Integer.valueOf(columnIndex) }),
 							SQLError.SQL_STATE_ILLEGAL_ARGUMENT); //$NON-NLS-1$
 				}
 			}
@@ -1285,7 +1282,7 @@ public class ResultSet implements java.sql.ResultSet {
 					} else {
 						throw SQLError.createSQLException(Messages
 							.getString("ResultSet.Bad_format_for_BigDecimal",
-									new Object[] { new Integer(columnIndex),
+									new Object[] { Integer.valueOf(columnIndex),
 											stringVal }),
 							SQLError.SQL_STATE_ILLEGAL_ARGUMENT); //$NON-NLS-1$
 						}
@@ -1299,7 +1296,7 @@ public class ResultSet implements java.sql.ResultSet {
 					} catch (ArithmeticException arithEx) {
 						throw SQLError.createSQLException(Messages.getString(
 								"ResultSet.Bad_format_for_BigDecimal",
-								new Object[] { new Integer(columnIndex),
+								new Object[] { Integer.valueOf(columnIndex),
 										stringVal }),
 								SQLError.SQL_STATE_ILLEGAL_ARGUMENT); //$NON-NLS-1$
 					}
@@ -1365,7 +1362,7 @@ public class ResultSet implements java.sql.ResultSet {
 						throw new SQLException(Messages
 								.getString("ResultSet.Bad_format_for_BigDecimal",
 										new Object[] { stringVal,
-												new Integer(columnIndex) }),
+												Integer.valueOf(columnIndex) }),
 								SQLError.SQL_STATE_ILLEGAL_ARGUMENT); //$NON-NLS-1$
 					}
 				}
@@ -1382,7 +1379,7 @@ public class ResultSet implements java.sql.ResultSet {
 						throw new SQLException(Messages
 								.getString("ResultSet.Bad_format_for_BigDecimal",
 										new Object[] { stringVal,
-												new Integer(columnIndex) }),
+												Integer.valueOf(columnIndex) }),
 								SQLError.SQL_STATE_ILLEGAL_ARGUMENT); //$NON-NLS-1$
 					}
 				}
@@ -1400,7 +1397,7 @@ public class ResultSet implements java.sql.ResultSet {
 							throw new SQLException(Messages
 									.getString("ResultSet.Bad_format_for_BigDecimal",
 											new Object[] { stringVal,
-													new Integer(columnIndex) }),
+													Integer.valueOf(columnIndex) }),
 									SQLError.SQL_STATE_ILLEGAL_ARGUMENT); //$NON-NLS-1$
 						}
 					}
@@ -1414,7 +1411,7 @@ public class ResultSet implements java.sql.ResultSet {
 				throw new SQLException(Messages
 						.getString("ResultSet.Bad_format_for_BigDecimal",
 								new Object[] { stringVal,
-										new Integer(columnIndex) }),
+										Integer.valueOf(columnIndex) }),
 						SQLError.SQL_STATE_ILLEGAL_ARGUMENT); //$NON-NLS-1$
 			}
 		}
@@ -1716,6 +1713,10 @@ public class ResultSet implements java.sql.ResultSet {
 		// than the iteration over the string, as String.trim()
 		// will return a new string only if whitespace is present
 		//
+		
+		if (stringVal == null) {
+			return 0;
+		}
 		
 		stringVal = stringVal.trim(); 
 		
@@ -2185,7 +2186,7 @@ public class ResultSet implements java.sql.ResultSet {
 				default:
 					throw SQLError.createSQLException(Messages.getString(
 							"ResultSet.Bad_format_for_Date", new Object[] {
-									stringVal, new Integer(columnIndex) }),
+									stringVal, Integer.valueOf(columnIndex) }),
 							SQLError.SQL_STATE_ILLEGAL_ARGUMENT); //$NON-NLS-1$
 				} /* endswitch */
 			} else if (this.fields[columnIndex - 1].getMysqlType() == MysqlDefs.FIELD_TYPE_YEAR) {
@@ -2213,7 +2214,7 @@ public class ResultSet implements java.sql.ResultSet {
 					
 					throw SQLError.createSQLException(Messages.getString(
 							"ResultSet.Bad_format_for_Date", new Object[] {
-									stringVal, new Integer(columnIndex) }),
+									stringVal, Integer.valueOf(columnIndex) }),
 							SQLError.SQL_STATE_ILLEGAL_ARGUMENT); //$NON-NLS-1$
 				}
 
@@ -2237,7 +2238,7 @@ public class ResultSet implements java.sql.ResultSet {
 		} catch (Exception e) {
 			throw SQLError.createSQLException(Messages.getString(
 					"ResultSet.Bad_format_for_Date", new Object[] { stringVal,
-							new Integer(columnIndex) }),
+							Integer.valueOf(columnIndex) }),
 					SQLError.SQL_STATE_ILLEGAL_ARGUMENT); //$NON-NLS-1$
 		}
 	}
@@ -2262,7 +2263,7 @@ public class ResultSet implements java.sql.ResultSet {
 
 			boolean allZeroDate = true;
 			
-			boolean onlyTimePresent = true;
+			boolean onlyTimePresent = StringUtils.indexOf(dateAsBytes, ':') != -1;
 			
 			int length = dateAsBytes.length;
 			
@@ -2360,7 +2361,7 @@ public class ResultSet implements java.sql.ResultSet {
 				default:
 					throw SQLError.createSQLException(Messages.getString(
 							"ResultSet.Bad_format_for_Date", new Object[] {
-									new String(dateAsBytes), new Integer(columnIndex) }),
+									new String(dateAsBytes), Integer.valueOf(columnIndex) }),
 							SQLError.SQL_STATE_ILLEGAL_ARGUMENT); //$NON-NLS-1$
 				} /* endswitch */
 			} else if (this.fields[columnIndex - 1].getMysqlType() == MysqlDefs.FIELD_TYPE_YEAR) {
@@ -2388,7 +2389,7 @@ public class ResultSet implements java.sql.ResultSet {
 					
 					throw SQLError.createSQLException(Messages.getString(
 							"ResultSet.Bad_format_for_Date", new Object[] {
-									new String(dateAsBytes), new Integer(columnIndex) }),
+									new String(dateAsBytes), Integer.valueOf(columnIndex) }),
 							SQLError.SQL_STATE_ILLEGAL_ARGUMENT); //$NON-NLS-1$
 				}
 
@@ -2412,7 +2413,7 @@ public class ResultSet implements java.sql.ResultSet {
 		} catch (Exception e) {
 			throw SQLError.createSQLException(Messages.getString(
 					"ResultSet.Bad_format_for_Date", new Object[] { new String(dateAsBytes),
-							new Integer(columnIndex) }),
+							Integer.valueOf(columnIndex) }),
 					SQLError.SQL_STATE_ILLEGAL_ARGUMENT); //$NON-NLS-1$
 		}
 	}
@@ -2536,7 +2537,7 @@ public class ResultSet implements java.sql.ResultSet {
 			
 			throw SQLError.createSQLException(Messages.getString(
 					"ResultSet.Bad_format_for_number", new Object[] {
-							stringVal, new Integer(colIndex) }),
+							stringVal, Integer.valueOf(colIndex) }),
 					SQLError.SQL_STATE_ILLEGAL_ARGUMENT);
 		}
 	}
@@ -3683,7 +3684,7 @@ public class ResultSet implements java.sql.ResultSet {
 					throw SQLError.createSQLException(
 							Messages
 									.getString("ResultSet.Bad_format_for_BigDecimal", 
-											new Object[] {stringVal, new Integer(columnIndex)}),
+											new Object[] {stringVal, Integer.valueOf(columnIndex)}),
 							SQLError.SQL_STATE_ILLEGAL_ARGUMENT);
 				}
 
@@ -4908,7 +4909,7 @@ public class ResultSet implements java.sql.ResultSet {
 				// valueOf would be nicer here, but it isn't
 				// present in JDK-1.3.1, which is what the CTS
 				// uses.
-				return new Boolean(getBoolean(columnIndex));
+				return Boolean.valueOf(getBoolean(columnIndex));
 			}
 
 			Object columnValue = this.thisRow[columnIndex - 1];
@@ -4933,32 +4934,32 @@ public class ResultSet implements java.sql.ResultSet {
 			// valueOf would be nicer here, but it isn't
 			// present in JDK-1.3.1, which is what the CTS
 			// uses.
-			return new Boolean(getBoolean(columnIndex));
+			return Boolean.valueOf(getBoolean(columnIndex));
 
 		case Types.TINYINT:
 			if (!field.isUnsigned()) {
-				return new Integer(getByte(columnIndex));
+				return Integer.valueOf(getByte(columnIndex));
 			}
 
-			return new Integer(getInt(columnIndex));
+			return Integer.valueOf(getInt(columnIndex));
 
 		case Types.SMALLINT:
 
-			return new Integer(getInt(columnIndex));
+			return Integer.valueOf(getInt(columnIndex));
 
 		case Types.INTEGER:
 
 			if (!field.isUnsigned() || 
 					field.getMysqlType() == MysqlDefs.FIELD_TYPE_INT24) {
-				return new Integer(getInt(columnIndex));
+				return Integer.valueOf(getInt(columnIndex));
 			}
 
-			return new Long(getLong(columnIndex));
+			return Long.valueOf(getLong(columnIndex));
 			
 		case Types.BIGINT:
 
 			if (!field.isUnsigned()) {
-				return new Long(getLong(columnIndex));
+				return Long.valueOf(getLong(columnIndex));
 			}
 
 			String stringVal = getString(columnIndex);
@@ -4972,7 +4973,7 @@ public class ResultSet implements java.sql.ResultSet {
 			} catch (NumberFormatException nfe) {
 				throw SQLError.createSQLException(Messages.getString(
 						"ResultSet.Bad_format_for_BigInteger", new Object[] {
-								new Integer(columnIndex), stringVal }),
+								Integer.valueOf(columnIndex), stringVal }),
 						SQLError.SQL_STATE_ILLEGAL_ARGUMENT); //$NON-NLS-1$
 			}
 
@@ -5075,7 +5076,7 @@ public class ResultSet implements java.sql.ResultSet {
 		case Types.DATE:
 			if (field.getMysqlType() == MysqlDefs.FIELD_TYPE_YEAR
 					&& !this.connection.getYearIsDateType()) {
-				return new Short(getShort(columnIndex));
+				return Short.valueOf(getShort(columnIndex));
 			}
 
 			return getDate(columnIndex);
@@ -5179,22 +5180,22 @@ public class ResultSet implements java.sql.ResultSet {
 			// valueOf would be nicer here, but it isn't
 			// present in JDK-1.3.1, which is what the CTS
 			// uses.
-			return new Boolean(getBoolean(columnIndex));
+			return Boolean.valueOf(getBoolean(columnIndex));
 
 		case Types.TINYINT:
-			return new Integer(getInt(columnIndex));
+			return Integer.valueOf(getInt(columnIndex));
 
 		case Types.SMALLINT:
-			return new Integer(getInt(columnIndex));
+			return Integer.valueOf(getInt(columnIndex));
 
 		case Types.INTEGER:
 
 			if (!field.isUnsigned() || 
 					field.getMysqlType() == MysqlDefs.FIELD_TYPE_INT24) {
-				return new Integer(getInt(columnIndex));
+				return Integer.valueOf(getInt(columnIndex));
 			}
 
-			return new Long(getLong(columnIndex));
+			return Long.valueOf(getLong(columnIndex));
 
 		case Types.BIGINT:
 
@@ -5202,7 +5203,7 @@ public class ResultSet implements java.sql.ResultSet {
 				return getBigDecimal(columnIndex);
 			}
 
-			return new Long(getLong(columnIndex));
+			return Long.valueOf(getLong(columnIndex));
 
 		case Types.DECIMAL:
 		case Types.NUMERIC:
@@ -5266,7 +5267,7 @@ public class ResultSet implements java.sql.ResultSet {
 		case Types.DATE:
 			if (field.getMysqlType() == MysqlDefs.FIELD_TYPE_YEAR
 					&& !this.connection.getYearIsDateType()) {
-				return new Short(getShort(columnIndex));
+				return Short.valueOf(getShort(columnIndex));
 			}
 
 			return getDate(columnIndex);
@@ -6082,7 +6083,7 @@ public class ResultSet implements java.sql.ResultSet {
 			int length = timeAsBytes.length;
 			
 			boolean allZeroTime = true;
-			boolean onlyTimePresent = true;
+			boolean onlyTimePresent = StringUtils.indexOf(timeAsBytes, ':') != -1;
 			
 			for (int i = 0; i < length; i++) {
 				byte b = timeAsBytes[i];
@@ -6669,7 +6670,7 @@ public class ResultSet implements java.sql.ResultSet {
 			synchronized (sessionCalendar) {
 				boolean allZeroTimestamp = true;
 				
-				boolean onlyTimePresent = true;
+				boolean onlyTimePresent = StringUtils.indexOf(timestampAsBytes, ':') != -1;
 				
 				for (int i = 0; i < length; i++) {
 					byte b = timestampAsBytes[i];
@@ -7247,13 +7248,7 @@ public class ResultSet implements java.sql.ResultSet {
 				message.toString()));
 
 	}
-
-	private void issueDataTruncationWarningIfConfigured(int columnIndex,
-			int readSize, int truncatedToSize) {
-		DataTruncation dt = new DataTruncation(columnIndex, false, true,
-				readSize, truncatedToSize);
-	}
-
+	
 	/**
 	 * JDBC 2.0
 	 * 
@@ -7700,10 +7695,10 @@ public class ResultSet implements java.sql.ResultSet {
 												.getString(
 														"ResultSet.Too_Large_Result_Set",
 														new Object[] {
-																new Integer(
+																Integer.valueOf(
 																		this.rowData
 																				.size()),
-																new Integer(
+																Integer.valueOf(
 																		this.connection
 																				.getResultSetSizeThreshold()) })));
 					}
@@ -7721,7 +7716,7 @@ public class ResultSet implements java.sql.ResultSet {
 								this.resultId, System.currentTimeMillis(), 0, null,
 								this.pointOfOrigin, Messages.getString(
 										"ResultSet.Possible_incomplete_traversal_of_result_set", //$NON-NLS-1$
-										new Object[] {new Integer(getRow()), new Integer(this.rowData.size())})));
+										new Object[] {Integer.valueOf(getRow()), Integer.valueOf(this.rowData.size())})));
 					}
 				}
 
