@@ -72,12 +72,12 @@ public class MysqlXAConnection extends MysqlPooledConnection implements
 	static {
 		HashMap temp = new HashMap();
 
-		temp.put(new Integer(1397), new Integer(XAException.XAER_NOTA));
-		temp.put(new Integer(1398), new Integer(XAException.XAER_INVAL));
-		temp.put(new Integer(1399), new Integer(XAException.XAER_RMFAIL));
-		temp.put(new Integer(1400), new Integer(XAException.XAER_OUTSIDE));
-		temp.put(new Integer(1401), new Integer(XAException.XAER_RMERR));
-		temp.put(new Integer(1402), new Integer(XAException.XA_RBROLLBACK));
+		temp.put(Integer.valueOf(1397), Integer.valueOf(XAException.XAER_NOTA));
+		temp.put(Integer.valueOf(1398), Integer.valueOf(XAException.XAER_INVAL));
+		temp.put(Integer.valueOf(1399), Integer.valueOf(XAException.XAER_RMFAIL));
+		temp.put(Integer.valueOf(1400), Integer.valueOf(XAException.XAER_OUTSIDE));
+		temp.put(Integer.valueOf(1401), Integer.valueOf(XAException.XAER_RMERR));
+		temp.put(Integer.valueOf(1402), Integer.valueOf(XAException.XA_RBROLLBACK));
 
 		MYSQL_ERROR_CODES_TO_XA_ERROR_CODES = Collections.unmodifiableMap(temp);
 	}
@@ -559,7 +559,7 @@ public class MysqlXAConnection extends MysqlPooledConnection implements
 	protected static XAException mapXAExceptionFromSQLException(SQLException sqlEx) {
 
 		Integer xaCode = (Integer) MYSQL_ERROR_CODES_TO_XA_ERROR_CODES
-				.get(new Integer(sqlEx.getErrorCode()));
+				.get(Integer.valueOf(sqlEx.getErrorCode()));
 
 		if (xaCode != null) {
 			return new MysqlXAException(xaCode.intValue(), sqlEx.getMessage(), null);
